--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,9 @@ h2 {
 h3 {
     font-size: 1em;
     word-wrap: break-word;
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
     hyphens: auto;
 }
 
